[backend] Add tests